--- a/travelsFront/app/templates/_controller_manual.hbs
+++ b/travelsFront/app/templates/_controller_manual.hbs
@@ -1,9 +1,9 @@
 {{#paper-card}}
   {{#paper-card-title}}
     {{#paper-card-title-text}}
-      <h4>Επεξεργασία Υποβεβλημένης Αίτησης Αποζημίωσης</h4>    
+      <h4>Επεξεργασίa Υποβληθείσας Αίτησης Αποζημίωσης</h4>    
       <p>
-        Ο χρήστης που εκτελεί τον Λογιστικό Έλεγχο έχει τη δυνατότητα να επεξεργαστεί τα στοιχεία μιας υποβεβλημένης αίτησης αποζημίωσης, αφού μεταβεί στην καρτέλα «Λίστα Αιτήσεων» και επιλέξει την ενέργεια «Επεξεργασία».
+        Ο χρήστης που εκτελεί τον Λογιστικό Έλεγχο έχει τη δυνατότητα να επεξεργαστεί τα στοιχεία μιας υποβληθείσας αίτησης αποζημίωσης, αφού μεταβεί στην καρτέλα «Λίστα Αιτήσεων» και επιλέξει την ενέργεια «Επεξεργασία».
         Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία με τις πραγματικές τελικές τιμές τους 
         (με * σημειώνονται τα υποχρεωτικά πεδία):
       <ul>
@@ -76,7 +76,7 @@
           </tr>
           <tr>
             <td>2</td> 
-            <td>Υποβεβλημένη από τον μετακινούμενο</td>
+            <td>Υποβληθείσα από τον μετακινούμενο</td>
             <td>-</td>
           </tr>
           <tr>
@@ -101,7 +101,7 @@
           </tr>
           <tr>
             <td>7</td> 
-            <td>Υποβεβλημένη από μετακινούμενο για αποζημίωση</td>
+            <td>Υποβληθείσα από μετακινούμενο για αποζημίωση</td>
             <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής</td>
           </tr>
           <tr>
