--- a/travelsFront/app/templates/_manager_manual.hbs
+++ b/travelsFront/app/templates/_manager_manual.hbs
@@ -97,7 +97,7 @@
           </tr>
           <tr>
             <td>2</td> 
-            <td>Υποβεβλημένη από τον μετακινούμενο</td>
+            <td>Υποβληθείσα από τον μετακινούμενο</td>
             <td>Αναίρεση Υποβολής</td>
           </tr>
           <tr>
@@ -122,7 +122,7 @@
           </tr>
           <tr>
             <td>7</td> 
-            <td>Υποβεβλημένη από μετακινούμενο για αποζημίωση</td>
+            <td>Υποβληθείσα από μετακινούμενο για αποζημίωση</td>
             <td>Αναίρεση Υποβολής</td>
           </tr>
           <tr>
