--- a/travelsFront/app/templates/_president_secretary_manual.hbs
+++ b/travelsFront/app/templates/_president_secretary_manual.hbs
@@ -39,7 +39,7 @@
           </tr>
           <tr>
             <td>2</td> 
-            <td>Υποβεβλημένη από τον μετακινούμενο</td>
+            <td>Υποβληθείσα από τον μετακινούμενο</td>
             <td>-</td>
           </tr>
           <tr>
@@ -64,7 +64,7 @@
           </tr>
           <tr>
             <td>7</td> 
-            <td>Υποβεβλημένη από μετακινούμενο για αποζημίωση</td>
+            <td>Υποβληθείσα από μετακινούμενο για αποζημίωση</td>
             <td>-</td>
           </tr>
           <tr>
