--- a/travelsFront/app/templates/_secretary_manual.hbs
+++ b/travelsFront/app/templates/_secretary_manual.hbs
@@ -1,9 +1,9 @@
 {{#paper-card}}
   {{#paper-card-title}}
     {{#paper-card-title-text}}
-      <h4>Επεξεργασία Υποβεβλημένης Αίτησης Μετακίνησης</h4>    
+      <h4>Επεξεργασία Υποβληθείσας Αίτησης Μετακίνησης</h4>    
       <p>
-        Η Γραμματεία έχει τη δυνατότητα να επεξεργαστεί τα στοιχεία μιας υποβεβλημένης αίτησης μετακίνησης, 
+        Η Γραμματεία έχει τη δυνατότητα να επεξεργαστεί τα στοιχεία μιας υποβληθείσας αίτησης μετακίνησης, 
         αφού μεταβεί στην καρτέλα «Λίστα Αιτήσεων» και επιλέξει την ενέργεια «Επεξεργασία».
         Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία εφόσον αυτά δεν έχουν συμπληρωθεί από τον μετακινούμενο 
         (με * σημειώνονται τα υποχρεωτικά πεδία):
@@ -90,7 +90,7 @@
           </tr>
           <tr>
             <td>2</td> 
-            <td>Υποβεβλημένη από τον μετακινούμενο</td>
+            <td>Υποβληθείσα από τον μετακινούμενο</td>
             <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής</td>
           </tr>
           <tr>
@@ -115,7 +115,7 @@
           </tr>
           <tr>
             <td>7</td> 
-            <td>Υποβεβλημένη από μετακινούμενο για αποζημίωση</td>
+            <td>Υποβληθείσα από μετακινούμενο για αποζημίωση</td>
             <td>-</td>
           </tr>
           <tr>
