--- a/travelsFront/app/templates/_controller_manual.hbs
+++ b/travelsFront/app/templates/_controller_manual.hbs
@@ -1,7 +1,7 @@
 {{#paper-card}}
   {{#paper-card-title}}
     {{#paper-card-title-text}}
-      <h4>Επεξεργασίa Υποβληθείσας Αίτησης Αποζημίωσης</h4>    
+      <h4>Επεξεργασία Υποβληθείσας Αίτησης Αποζημίωσης</h4>    
       <p>
         Ο χρήστης που εκτελεί τον Λογιστικό Έλεγχο έχει τη δυνατότητα να επεξεργαστεί τα στοιχεία μιας υποβληθείσας αίτησης αποζημίωσης, αφού μεταβεί στην καρτέλα «Λίστα Αιτήσεων» και επιλέξει την ενέργεια «Επεξεργασία».
         Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία με τις πραγματικές τελικές τιμές τους 
