Inform user about email verification process

--- a/travelsFront/app/templates/_register_card.hbs
+++ b/travelsFront/app/templates/_register_card.hbs
@@ -3,6 +3,7 @@
     <md-card-title>
       <md-card-title-text>
         <span class="md-title">{{t 'signup.tab'}}</span>
+        <span class="md-text">{{t 'signup.email.verification'}}</span>
       </md-card-title-text>
     </md-card-title>
     <md-card-content>
