--- a/travelsFront/app/templates/_register_card.hbs
+++ b/travelsFront/app/templates/_register_card.hbs
@@ -3,7 +3,7 @@
     <md-card-title>
       <md-card-title-text>
         <span class="md-title">{{t 'signup.tab'}}</span>
-        <span class="md-text">{{t 'signup.email.verification'}}</span>
+        <p class="md-subhead">{{t 'signup.email.verification'}}</p>
       </md-card-title-text>
     </md-card-title>
     <md-card-content>
