Remove redundant movement_id from templates

--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
@@ -16,7 +16,7 @@
 	<p>Δ. Το γεγονός ότι η κάτωθι αποζημίωση είναι εντός του εγκεκριμένου με την απόφαση μετακίνησης ποσού.</p>
 </div>
 <h4 style='text-align:center;'><b>ΒΕΒΑΙΩΝΟΥΜΕ</b></h4>
-<div style='text-align:left;'>Ότι ο απολογισμός της μετακίνησης με ΔΣΕ: {{dse}} Αρ. Μετ {{movement_id}} έχει ως εξής:</div><br>
+<div style='text-align:left;'>Ότι ο απολογισμός της μετακίνησης με ΔΣΕ: {{dse}} έχει ως εξής:</div><br>
 
 
 <table style="width:100%">
