--- a/travelsBackend/texpenses/templates/texpenses/compensation_protocol.html
+++ b/travelsBackend/texpenses/templates/texpenses/compensation_protocol.html
@@ -1,8 +1,10 @@
+{% load tz %}
+
 {% extends "texpenses/protocol.html" %}
 {% block protocol_content%}
 <h5 style="text-align: right;">
 	ΔΣΕ:&nbsp;{{dse}}<br>
-	Αθήνα,&nbsp;{{compensation_petition_date|date:"d/m/Y"}}<br>
+	Αθήνα,&nbsp;{{compensation_petition_date|timezone:base_timezone|date:"d/m/Y"}}<br>
 	Αρ.&nbsp;Πρωτ.:&nbsp;{{compensation_petition_protocol}}
 </h5>
 
