--- a/travelsFront/app/templates/_manager_manual.hbs
+++ b/travelsFront/app/templates/_manager_manual.hbs
@@ -67,6 +67,25 @@
       </ul>
       Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωσή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Αποζημίωσης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
       <br><br>
+        <h4>Επιπλέον πληροφορίες</h4>
+        <h5>Παραστατικά/δικαιολογητικά</h5>
+        Επιπλέον, ο μετακινούμενος θα πρέπει να προσκομίσει στο λογιστήριο τα εξής παραστατικά/ δικαιολογητικά:
+        <ul>
+          <li>Εκτυπωμένη αίτηση και απόφαση μετακίνησης (σας έχουν αποσταλεί με e-mail σκαναρισμένα με υπογραφές απο την Γραμματεία Προέδρου)</li>
+          <li>Boarding passes</li>
+          <li>Ατζέντα</li>
+          <li>Απολογισμό (το ίδιο αρχείο που έχει ανέβει και στην εφαρμογή)</li>
+          <li>Προσωπικά έξοδα (Σε περίπτωση που το νόμισμα ΔΕΝ είναι ευρώ (€) εκτυπώνεται την ισοτιμία του στο <a href="https://www.oanda.com/currency/converter/">currency converter</a> βάζοντας κάθε φορά την αντίστοιχη ημερομηνία της απόδειξης σε κάθε απόδειξη.)</li>
+        </ul>
+        <h5>Φόρος Πόλης (City Tax)</h5>
+        Κάποιες φορές τα ξενοδοχεία χρεώνουν Φόρο Πόλης (City Tax). Για το συγκεκριμένο έξοδο δεν χρειάζεται ο μετακινούμενος να ζητήσει τιμολόγιο. Αρκεί μια απλή απόδειξη με το όνομά του. Το συγκεκριμένο έξοδο θεωρείται προσωπικό και προστίθεται στα λοιπά έξοδα του μετακινούμενου, για τα οποία αποζημιώνεται.
+        <h5>Τιμολόγια</h5>
+        <ul>
+        <li>πρακτορεία: Οι κρατήσεις της διαμονής πρέπει να γίνονται μέσω των πρακτορείων. Τα πρακτορεία γνωρίζουν και εκδίδουν σωστό τιμολόγιο στα στοιχεία της Εταιρείας. Επίσης, τα πρακτορεία γνωρίζουν και στέλνουν κατευθείαν το τιμολόγιο στο λογιστήριο. (Δεν χρειάζεται ο μετακινούμενος να προσκομίσει κάποιο επιπλέον έγγραφο στο λογιστήριο)</li>
+        <li>εκτός πρακτορείου: Υπάρχουν (σπάνιες) περιπτώσεις που η διαμονή πληρώνεται από τον μετακινούμενο. Για τη χρέωση της διαμονής στο ξενοδοχείο πρέπει ο μετακινούμενος να ζητάει πάντα τιμολόγιο στα στοιχεία της ΕΔΕΤ. Στις περιπτώσεις αυτές, το τιμολόγιο θα πρέπει να φτάνει άμεσα στο λογιστήριο, ασχέτως με το πότε θα ετοιμαστεί το εξοδολόγιο του μετακινούμενου. Το τιμολόγιο πρέπει να προσκομίζεται στο λογιστήριο με αναφορά το ΔΣΕ του ταξιδιού (πχ ΔΣΕ 7882).</li>
+      </ul>
+      <br>
+      <em>Σημειώνεται ότι για την επικαιροποιημένη έκδοση των παραπάνω οδηγιών μπορείτε να ανατρέξετε στην αντίστοιχη σελίδα του <a href="***REMOVED***">wiki</a></em>
       </p>
     {{/paper-card-title-text}}
   {{/paper-card-title}}
