Company name changes

--- a/travelsBackend/texpenses/templates/texpenses/decision_signature.html
+++ b/travelsBackend/texpenses/templates/texpenses/decision_signature.html
@@ -6,7 +6,7 @@
 	Το σύνολο των δαπανών μετακίνησης καλύπτεται από τον λογαριασμό του έργου «{{project}}».
 </h5>
 <h5 style="text-align: right;">
-	Ο ΠΡΟΕΔΡΟΣ ΚΑΙ ΔΙΕΥΘΥΝΩΝ<br>
-       	ΣΥΜΒΟΥΛΟΣ ΤΗΣ ΕΔΕΤ ΑΕ
+	Ο ΔΙΕΥΘΥΝΩΝ ΣΥΜΒΟΥΛΟΣ<br/>
+	ΤΗΣ ΕΔΥΤΕ ΑΕ
 </h5>
 {% endblock %}
