--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
@@ -116,7 +116,7 @@
 	</tr>
   {% if additional_expenses_grnet > 0 %}
   <tr>
-    <td>Λοιπά έξοδα μετακίνησης ΕΔΕΤ</td>
+    <td>Λοιπά έξοδα μετακίνησης ΕΔΥΤΕ</td>
     <td>{{additional_expenses_grnet}} ευρώ</td>
   </tr>
   {% endif %}
