--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
@@ -5,22 +5,30 @@
 
 {% block content_data %}
 <div style='text-align:center;'><h4><b>ΑΠΟΦΑΣΗ ΜΕΤΑΚΙΝΗΣΗΣ<br>
-			Ο ΠΡΟΕΔΡΟΣ ΚΑΙ ΔΙΕΥΘΥΝΩΝ ΣΥΜΒΟΥΛΟΣ ΤΗΣ ΕΔΕΤ ΑΕ</b><br></h4>
+			Ο ΔΙΕΥΘΥΝΩΝ ΣΥΜΒΟΥΛΟΣ ΤΗΣ ΕΔΥΤΕ ΑΕ</b><br></h4>
 
 </div>
 <div style='text-align:left;'>
 	<p>Έχοντας υπόψη:<br>
 	Α. Τις διατάξεις:<br></p>
 	<ol><li>Της υποπαραγράφου Δ.9 του Νόμου 4336/2015 (ΦΕΚ Α 94/14.08.2015) «Συνταξιοδοτικές διατάξεις - Κύρωση του Σχεδίου Σύμβασης Οικονομικής Ενίσχυσης από τον Ευρωπαϊκό Μηχανισμό Σταθερότητας και ρυθμίσεις για την υλοποίηση της Συμφωνίας Χρηματοδότησης».</li>
-		<li>Του Π.Δ. 29/98 περί σύστασης Ανωνύμου Εταιρείας με την επωνυμία «Εθνικό Δίκτυο Έρευνας Τεχνολογίας Α.Ε.» (ΦΕΚ 34/Α/98) όπως τροποποιήθηκε από το Π.Δ. 308/2001 (ΦΕΚ 209/Α/2001), το Π.Δ. 145/2003 (ΦΕΚ 121/Α/2003), το ν. 2919/2001 (ΦΕΚ128/Α/2001) και το ν. 3438/2006 (ΦΕΚ 33/Α/2006) και από τον ν. 4115/2013 (ΦΕΚ 24/Α/2013)</li></ol>
-	<p>Β. Την απόφαση της από 06/11/2015, 367ης Συνεδρίας του ΔΣ της ΕΔΕΤ Α.Ε (Θέμα 2) περί εκπροσωπήσεως της ΕΔΕΤ Α.Ε.</p>
+	<li>Του Π.Δ. 29/98 περί σύστασης Ανωνύμου Εταιρείας με την επωνυμία «Εθνικό Δίκτυο Έρευνας Τεχνολογίας Α.Ε.» (ΦΕΚ 34/Α/98) όπως τροποποιήθηκε από το Π.Δ. 308/2001 (ΦΕΚ 209/Α/2001), το Π.Δ. 145/2003 (ΦΕΚ 121/Α/2003), το Ν. 2919/2001 (ΦΕΚ128/Α/2001), το Ν. 3438/2006 (ΦΕΚ 33/Α/2006), το Ν. 4115/2013 (ΦΕΚ 24/Α/2013) και τον Ν. 4452/2017(ΦΕΚ 17Α') άρθρο 28 παρ. 4 καθώς και όπως τροποποιήθηκε και κωδικοποιήθηκε με την απόφαση της από 08/03/2018 Αυτόκλητης Έκτακτης Γενική Συνέλευση (Πρακτικό 39) και καταχωρήθηκε στο ΓΕΜΗ την 23/04/2018, με Κωδικό Αριθμό Καταχώρισης 1372691, σύμφωνα με την από 24/04/2018 και με Αριθ. Πρωτ.: 1154739 Ανακοίνωση Καταχώρησης του ΕΒΕΑ.
+	</li>
+	<li>Το άρθρο 1 του Π.Δ. 81/2019 (ΦΕΚ 119/Α/8.7.2019) «Σύσταση, συγχώνευση, μετονομασία και κατάργηση Υπουργείων και καθορισμός των αρμοδιοτήτων τους - Μεταφορά υπηρεσιών και αρμοδιοτήτων μεταξύ Υπουργείων».</li>
+	<li>Το άρθρο 58 του Ν. 4623/2019 (ΦΕΚ 134/Α/9.8.2019) «Ρυθμίσεις του Υπουργείου Εσωτερικών, διατάξεις για την ψηφιακή διακυβέρνηση, συνταξιοδοτικές ρυθμίσεις και άλλα επείγοντα ζητήματα».</li></ol>
+	<p>Β. Την απόφαση της από 28/08/2019, 494ης Συνεδρίας του ΔΣ της ΕΔΥΤΕ Α.Ε (Θέμα 3) περί εκπροσωπήσεως της ΕΔΥΤΕ Α.Ε.</p>
 	<p>Γ. Την ανάγκη κάλυψης των δαπανών μετακίνησης.</p>
 	<p>Δ. Το γεγονός ότι το ποσό της δεσμευόμενης, με την παρούσα, πίστωσης είναι εντός του εγκεκριμένου ποσού διάθεσης.</p>
 </div>
 <h4 style='text-align:center;'><b>ΑΠΟΦΑΣΙΖΟΥΜΕ</b></h4>
 <div style='text-align:left;'>Εγκρίνουμε την παρακάτω μετακίνηση:</div><br>
 
+<br/><br/>
+<footer style="position: absolute;right: 0;bottom: 0;left: 0;text-align: right;" >
+	{% include 'texpenses/footer.html' %}
+</footer>
 
+<br/><br/><br/><br/><br/><br/>
 <table style="width:100%">
 	<tr>
 		<td>Μετακινούμενος</td>
@@ -40,11 +48,7 @@
 	</tr>
 </table>
 
-<footer style="position: absolute;right: 0;bottom: 0;left: 0;text-align: right;" >
-	{% include 'texpenses/footer.html' %}
-</footer>
-
-	<br><br><br><br><br><br><br><br><br><br><br><br>
+	<br>
 	<table style="width:100%">
 		<tr>
 			<td>Ημερομηνία μετακίνησης</td>
