--- a/travelsBackend/texpenses/templates/texpenses/top.html
+++ b/travelsBackend/texpenses/templates/texpenses/top.html
@@ -6,16 +6,16 @@
 			<img src="{% static 'images/grnet.jpg' %}" style="width: 164px; height:82px;" alt="My image"/>
 		</td>
 		<td class='top' >
-			<font style="color: gray;">	<b>ΕΔΕΤ Α.Ε.</b><br>
-				Εθνικό Δίκτυο Έρευνας & Τεχνολογίας
+			<font style="color: gray;">	<b>ΕΔΥΤΕ Α.Ε.</b><br>
+				Εθνικό Δίκτυο Υποδομών Τεχνολογίας & Έρευνας Α.Ε.
 			</font>
 		</td>
 	</tr>
 	<tr>
 		<td class='top' >
 			<font style='color: gray;'>
-				<b>GRNET S.A.</b><br>
-				Greek -Research & Technology Network
+				<b>GRNET</b><br>
+				National Infrastructures for Research and Technology
 			</font>
 		</td>
 
