--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
@@ -8,7 +8,7 @@
 			Ο ΔΙΕΥΘΥΝΩΝ ΣΥΜΒΟΥΛΟΣ ΤΗΣ ΕΔΥΤΕ ΑΕ</b><br></h4>
 
 </div>
-<div style='text-align:left;'>
+<div style='text-align:left;font-size:13px;'>
 	<p>Έχοντας υπόψη:<br>
 	Α. Τις διατάξεις:<br></p>
 	<ol><li>Της υποπαραγράφου Δ.9 του Νόμου 4336/2015 (ΦΕΚ Α 94/14.08.2015) «Συνταξιοδοτικές διατάξεις - Κύρωση του Σχεδίου Σύμβασης Οικονομικής Ενίσχυσης από τον Ευρωπαϊκό Μηχανισμό Σταθερότητας και ρυθμίσεις για την υλοποίηση της Συμφωνίας Χρηματοδότησης».</li>
@@ -20,13 +20,12 @@
 	<p>Δ. Το γεγονός ότι η κάτωθι αποζημίωση είναι εντός του εγκεκριμένου με την απόφαση μετακίνησης ποσού.</p>
 </div>
 <h4 style='text-align:center;'><b>ΒΕΒΑΙΩΝΟΥΜΕ</b></h4>
-<div style='text-align:left;'>Ότι ο απολογισμός της μετακίνησης με ΔΣΕ: {{dse}} έχει ως εξής:</div><br><br>
+<div style='text-align:left;font-size:13px;'>Ότι ο απολογισμός της μετακίνησης με ΔΣΕ: {{dse}} έχει ως εξής:</div><br>
 
 <footer style="position: absolute;right: 0;bottom: 0;left: 0;text-align: right;" >
 	{% include 'texpenses/footer.html' %}
 </footer>
 
-<br/><br/><br/><br/><br/><br/>
 <table style="width:100%">
 	<tr>
 		<td>Μετακινούμενος</td>
@@ -46,8 +45,8 @@
 	</tr>
 </table>
 
+<br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
-	<br><br>
 	<table style="width:100%">
 		<tr>
 			<td>Ημερομηνία μετακίνησης</td>
