Pass links as props to the manual templates

--- a/travelsFront/app/templates/_manager_manual.hbs
+++ b/travelsFront/app/templates/_manager_manual.hbs
@@ -61,7 +61,7 @@
       <h4>Δημιουργία Αίτησης Αποζημίωσης</h4>
       <p>Ο μετακινούμενος, μετά την άφιξη του, θα πρέπει να συνδεθεί εκ νέου στο σύστημα και να συμπληρώσει τα ακόλουθα στοιχεία:
       <ul>
-        <li><b>Ανέβασμα αρχείων</b>: Ο μετακινούμενος θα πρέπει να ανεβάσει σε ένα αρχείο τύπου zip που περιέχει κατ' ελάχιστον: (1) το πρόγραμμα και (2) τον απολογισμό της μετακίνησης σύμφωνα με το (<a href="***REMOVED***">template</a>). Το αρχείο zip πρέπει να είναι μεγέθους μέχρι 8 MB.</li>
+        <li><b>Ανέβασμα αρχείων</b>: Ο μετακινούμενος θα πρέπει να ανεβάσει σε ένα αρχείο τύπου zip που περιέχει κατ' ελάχιστον: (1) το πρόγραμμα και (2) τον απολογισμό της μετακίνησης σύμφωνα με το (<a href="{{travel_report_template}}">template</a>). Το αρχείο zip πρέπει να είναι μεγέθους μέχρι 8 MB.</li>
         <li><b>Λοιπά Έξοδα Μετακίνησης</b>: Ο μετακινούμενος θα πρέπει να εισάγει το σύνολο των εξόδων μετακίνησης, αθροίζοντας όλα τα εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
         <li><b>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</b>: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου.</li>
       </ul>
@@ -85,7 +85,7 @@
         <li>εκτός πρακτορείου: Υπάρχουν (σπάνιες) περιπτώσεις που η διαμονή πληρώνεται από τον μετακινούμενο. Για τη χρέωση της διαμονής στο ξενοδοχείο πρέπει ο μετακινούμενος να ζητάει πάντα τιμολόγιο στα στοιχεία της ΕΔΥΤΕ. Στις περιπτώσεις αυτές, το τιμολόγιο θα πρέπει να φτάνει άμεσα στο λογιστήριο, ασχέτως με το πότε θα ετοιμαστεί το εξοδολόγιο του μετακινούμενου. Το τιμολόγιο πρέπει να προσκομίζεται στο λογιστήριο με αναφορά το ΔΣΕ του ταξιδιού (πχ ΔΣΕ 7882).</li>
       </ul>
       <br>
-      <em>Σημειώνεται ότι για την επικαιροποιημένη έκδοση των παραπάνω οδηγιών μπορείτε να ανατρέξετε στην αντίστοιχη σελίδα του <a href="***REMOVED***">wiki</a></em>
+      <em>Σημειώνεται ότι για την επικαιροποιημένη έκδοση των παραπάνω οδηγιών μπορείτε να ανατρέξετε στην αντίστοιχη σελίδα του <a href="{{travel_instructions}}">wiki</a></em>
       </p>
     {{/paper-card-title-text}}
   {{/paper-card-title}}
